@@ -1,3 +1,7 @@
+2004-08-04 Mikhail Khodjaiants
+	Fix for bug 69085: Arrays in the Expressions view 
+	* CDTDebugModelPresentation.java
+
 2004-07-15 Mikhail Khodjaiants
 	Fix for bug 70147. TVT3.0: Preferences CDT Editor has non-externalized string.
 	* plugin.properties
